Everything Before REST

--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -74,6 +74,12 @@
                             Register
                         </a>
                     </li>
+                    <li class="" >
+                        <a href="{% url 'myapp:login' %}">
+                            <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>&nbsp;
+                            Login
+                        </a>
+                    </li>
                     {% endif %}
                 </ul>
             </div>
