--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -1,10 +1,10 @@
 {% extends 'myapp/base.html' %}
 
-{% block title %}Create an Account{% endblock %}
+{% block title %}Login{% endblock %}
 {% block body %}
 
 
-    <h1> Create A new Account </h1>
+    <h1> Login to Your Account </h1>
 
     <form method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
@@ -12,11 +12,13 @@
     {% include 'myapp/form-template.html' %}
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-3">
-                <button type="submit" class="btn btn-success">Submit</button>
+                <button type="submit" class="btn btn-success">Sign In</button>
+                <h2 style="color: red" class="errornote"> {{ error_msg }}</h2>
             </div>
 
         </div>
 
     </form>
+
 
 {% endblock %}
