--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -47,9 +47,9 @@ body {
 
 /* Style buttons */
 .btn {
-  background-color: white; /* Blue background */
+  background-color: black; /* Blue background */
   border: none; /* Remove borders */
-  color: black; /* White text */
+  color: white; /* White text */
   padding: 10px 12px; /* Some padding */
   font-size: 16px; /* Set a font size */
   cursor: pointer; /* Mouse pointer on hover */
